feat: added Board method to create nodes

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             </div>
         </header>
         <main>
+            <h2 class="card-set-name" id="js-card-set-name"></h2>
             <div class="card-container" id="js-card-container">
                 <!--Hidden by default, when start is clicked, make visible-->
             </div>
