feat: too much stuff...
I was bad and not committing frequently.
Implemented matching logic, card shuffling, save game state,
load previous game state, set move counter, etc.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="stars stats-item" id="js-stars">
                     <p id="js-stars">&#9734; &#9733; &#9733;</p>
                 </div>
-                <div class="move-counter stats-item" id="js-move-counter">
+                <div class="move-counter stats-item">
                     <p>Moves: <span id="js-moves"></span></p>
                 </div>
                 <div class="star-avg stats-item" id="js-star-avg">
