feat: switched to CSS Grid

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <p>Moves: <span id="js-moves"></span></p>
                 </div>
                 <div class="star-avg stats-item">
-                    <p id="js-avg-stars">Average Stars: &#9734; &#9734; &#9734;</p>
+                    <p id="js-avg-stars"></p>
                     <!--To be added, checks localStorage for star history, averages stars-->
                 </div>
             </div>
